--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" style="background-color: #171717">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/kc.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kevin Chuang - Portfolio</title>
   </head>
